--- a/_posts/AITech/2022-01-17-[AITECH].md
+++ b/_posts/AITech/2022-01-17-[AITECH].md
@@ -1,7 +1,7 @@
 ---
 layout: single
 title: "Python & AI Math Basics"
-categories: boostcamp
+categories: ["AITech"]
 tag: [boostcamp, python]
 ---
 
