--- a/_posts/Pytorch/2022-01-28-MNIST.md
+++ b/_posts/Pytorch/2022-01-28-MNIST.md
@@ -37,7 +37,7 @@ Once you set up your Kaggle API. Let's download the MNIST dataset!
 
 Now, let's analyze codes!
 
-#### `dataset.py`
+## `dataset.py`
 
 ```python
 import os
@@ -82,7 +82,7 @@ class MNISTDataset(Dataset):
 
 ---
 
-#### `model.py`
+## `model.py`
 
 ```python
 import torch
@@ -127,7 +127,7 @@ class MNIST_CNN(nn.Module):
 
 ---
 
-#### `utils.py`
+## `utils.py`
 
 ```python
 import torch
@@ -157,7 +157,7 @@ def check_accuracy(loader, model):
 
 ---
 
-#### `train.py`
+## `train.py`
 
 ```python
 import torch
