--- a/_posts/Pytorch/2022-01-28-MNIST.md
+++ b/_posts/Pytorch/2022-01-28-MNIST.md
@@ -23,7 +23,7 @@ Once you set up your Kaggle API. Let's download the MNIST dataset!
 2. Enter `kaggle competitions download -c digit-recognizer`
 3. Now you'll see there's a `digit-recognizer.zip` file.
 4. Let's extract it using `unzip digit-recognizer.zip`
-5. Let's move all the extracted files to `data/` directory by `mkdir data`, `mv *.csv`, `\*.zip data.
+5. Let's move all the extracted files to `data/` directory by `mkdir data`, `mv *.csv data`, `mv *.zip data`.
 
 ## Folder Structure
 
