--- a/_posts/Python/2022-01-29-Week1_Quiz.md
+++ b/_posts/Python/2022-01-29-Week1_Quiz.md
@@ -19,6 +19,8 @@ For example,
 
 Since some of the questions might be very tricky if you don't comprehensively understand the subjects, I recommend going over my other posts about OOP and Namespace for better understanding.
 
+The namespace of each code block is assumed to be global or module namespace. In other words, `__name__ == "__main__"`
+
 ## Class object & Instantiation
 
 ### Q0
