Algorithm - DP added

--- a/_posts/Python/2022-01-29-2_Class.md
+++ b/_posts/Python/2022-01-29-2_Class.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "OOP: Class"
+title: "[Python] OOP: Class"
 categories: ["Python"]
 tag: [class, oop, python]
 author_profile: true
