--- a/_posts/Python/2022-01-29-Week1_Quiz.md
+++ b/_posts/Python/2022-01-29-Week1_Quiz.md
@@ -1,8 +1,8 @@
 ---
 layout: single
-title: "Namespace & OOP Quiz"
+title: "[Python] Namespace & OOP Quiz"
 categories: ["Python"]
-tag: [python, oop]
+tag: [python, oop, quiz]
 author_profile: true
 sidebar_main: true
 ---
