--- a/_posts/Pytorch/2022-01-28-MNIST.md
+++ b/_posts/Pytorch/2022-01-28-MNIST.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "MNIST from scratch"
+title: "[Pytorch] MNIST from scratch"
 categories: Pytorch
 tag: [python, pytorch]
 author_profile: true
