Algorithm - DP modified

--- a/_posts/Algorithm/DP/2022-02-02-1025DivisorGame.md
+++ b/_posts/Algorithm/DP/2022-02-02-1025DivisorGame.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[DP] #1025 Divisor Game.cpp"
+title: "[DP]#1025 Divisor Game"
 categories: ["dp"]
 tag: [algorithm, dp]
 ---
