--- a/_posts/Algorithm/DP/2022-02-02-1690.StoneGameVII.md
+++ b/_posts/Algorithm/DP/2022-02-02-1690.StoneGameVII.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[DP] 1690. Stone Game VII.cpp"
+title: "[DP]1690. Stone Game VII"
 categories: ["dp"]
 tag: [algorithm, dp]
 ---
