--- a/_posts/Algorithm/DP/2022-02-02-413.ArithmeticSlices.md
+++ b/_posts/Algorithm/DP/2022-02-02-413.ArithmeticSlices.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[DP] #413. Arithmetic Slices.cpp"
+title: "[DP]#413. Arithmetic Slices"
 categories: ["dp"]
 tag: [algorithm, dp]
 ---
