--- a/_posts/Algorithm/DP/2022-02-02-518.CoinChange2.md
+++ b/_posts/Algorithm/DP/2022-02-02-518.CoinChange2.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[DP] #518. Coin Change 2.cpp"
+title: "[DP]#518. Coin Change 2"
 categories: ["dp"]
 tag: [algorithm, dp]
 ---
