--- a/_posts/Algorithm/DP/2022-02-02-712.MinimumASCIIDeleteSumforTwoStrings.md
+++ b/_posts/Algorithm/DP/2022-02-02-712.MinimumASCIIDeleteSumforTwoStrings.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[DP] #712. Minimum ASCII Delete Sum for Two Strings.cpp"
+title: "[DP]#712. Minimum ASCII Delete Sum for Two Strings"
 categories: ["dp"]
 tag: [algorithm, dp]
 ---
