--- a/_posts/Algorithm/DP/2022-02-02-714.BestTimetoBuyandSellStockwithTransactionFee.md
+++ b/_posts/Algorithm/DP/2022-02-02-714.BestTimetoBuyandSellStockwithTransactionFee.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[DP] #714. Best Time to Buy and Sell Stock with Transaction Fee.cpp"
+title: "[DP]#714. Best Time to Buy and Sell Stock with Transaction Fee"
 categories: ["dp"]
 tag: [algorithm, dp]
 ---
