--- a/_posts/Algorithm/DP/2022-02-02-740.DeleteandEarn.md
+++ b/_posts/Algorithm/DP/2022-02-02-740.DeleteandEarn.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[DP] #740. Delete and Earn.cpp"
+title: "[DP]#740. Delete and Earn"
 categories: ["dp"]
 tag: [algorithm, dp]
 ---
