--- a/_posts/Algorithm/DP/2022-02-02-764.LargestPlusSign.md
+++ b/_posts/Algorithm/DP/2022-02-02-764.LargestPlusSign.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[DP] #764. Largest Plus Sign.cpp"
+title: "[DP]#764. Largest Plus Sign"
 categories: ["dp"]
 tag: [algorithm, dp]
 ---
