--- a/_posts/Algorithm/DP/2022-02-02-376.WiggleSubsequence.md
+++ b/_posts/Algorithm/DP/2022-02-02-376.WiggleSubsequence.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[DP] #376. Wiggle Subsequence.cpp"
+title: "[DP]#376. Wiggle Subsequence"
 categories: ["dp"]
 tag: [algorithm, dp]
 ---
