--- a/_posts/Algorithm/DP/2022-02-02-416.PartitionEqualSubsetSum.md
+++ b/_posts/Algorithm/DP/2022-02-02-416.PartitionEqualSubsetSum.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[DP] #416. Partition Equal Subset Sum.cpp"
+title: "[DP]#416. Partition Equal Subset Sum"
 categories: ["dp"]
 tag: [algorithm, dp]
 ---
