--- a/_posts/Algorithm/DP/2022-02-02-494.TargetSum.md
+++ b/_posts/Algorithm/DP/2022-02-02-494.TargetSum.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[DP] #494. Target Sum.cpp"
+title: "[DP]#494. Target Sum"
 categories: ["dp"]
 tag: [algorithm, dp]
 ---
