--- a/_posts/Algorithm/DP/2022-02-02-718.MaximumLengthofRepeatedSubarray.md
+++ b/_posts/Algorithm/DP/2022-02-02-718.MaximumLengthofRepeatedSubarray.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[DP] #718. Maximum Length of Repeated Subarray.cpp"
+title: "[DP]#718. Maximum Length of Repeated Subarray"
 categories: ["dp"]
 tag: [algorithm, dp]
 ---
