--- a/_posts/Algorithm/DP/2022-02-02-837.New21Game.md
+++ b/_posts/Algorithm/DP/2022-02-02-837.New21Game.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[DP] #837. New 21 Game.cpp"
+title: "[DP]#837. New 21 Game"
 categories: ["dp"]
 tag: [algorithm, dp]
 ---
