--- a/_posts/Algorithm/DP/2022-02-02-84.LargestRectangleinHistogram.md
+++ b/_posts/Algorithm/DP/2022-02-02-84.LargestRectangleinHistogram.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[DP] #84. Largest Rectangle in Histogram.cpp"
+title: "[DP]#84. Largest Rectangle in Histogram"
 categories: ["dp"]
 tag: [algorithm, dp]
 ---
