--- a/_posts/Algorithm/DP/2022-02-02-152.MaximumProductSubarray.md
+++ b/_posts/Algorithm/DP/2022-02-02-152.MaximumProductSubarray.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[DP]#152. Maximum Product Subarray"
+title: "[DP] #152. Maximum Product Subarray."
 categories: ["dp"]
 tag: [algorithm, dp]
 ---
