--- a/_posts/Algorithm/DP/2022-02-02-168.ExcelSheetColumnTitle.md
+++ b/_posts/Algorithm/DP/2022-02-02-168.ExcelSheetColumnTitle.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[DP]#168. Excel Sheet Column Title"
+title: "[DP] #168. Excel Sheet Column Title."
 categories: ["dp"]
 tag: [algorithm, dp]
 ---
