--- a/_posts/Algorithm/DP/2022-02-02-486.PredicttheWinner.md
+++ b/_posts/Algorithm/DP/2022-02-02-486.PredicttheWinner.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[DP]#486. Predict the Winner"
+title: "[DP] #486. Predict the Winner."
 categories: ["dp"]
 tag: [algorithm, dp]
 ---
