--- a/_posts/Algorithm/DP/2022-02-02-509.FibonacciNumber.md
+++ b/_posts/Algorithm/DP/2022-02-02-509.FibonacciNumber.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[DP]#509. Fibonacci Number"
+title: "[DP] #509. Fibonacci Number."
 categories: ["dp"]
 tag: [algorithm, dp]
 ---
