--- a/_posts/Algorithm/DP/2022-02-02-513.FindBottomLeftTreeValue.md
+++ b/_posts/Algorithm/DP/2022-02-02-513.FindBottomLeftTreeValue.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[DP]#513. Find Bottom Left Tree Value"
+title: "[DP] #513. Find Bottom Left Tree Value."
 categories: ["dp"]
 tag: [algorithm, dp]
 ---
