--- a/_posts/Algorithm/DP/2022-02-02-576.OutofBoundaryPaths.md
+++ b/_posts/Algorithm/DP/2022-02-02-576.OutofBoundaryPaths.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[DP]#576. Out of Boundary Paths"
+title: "[DP] #576. Out of Boundary Paths."
 categories: ["dp"]
 tag: [algorithm, dp]
 ---
