--- a/_posts/Algorithm/DP/2022-02-02-646.MaximumLengthofPairChain.md
+++ b/_posts/Algorithm/DP/2022-02-02-646.MaximumLengthofPairChain.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[DP]#646. Maximum Length of Pair Chain"
+title: "[DP] #646. Maximum Length of Pair Chain."
 categories: ["dp"]
 tag: [algorithm, dp]
 ---
