--- a/_posts/Algorithm/DP/2022-02-02-813.LargestSumofAverages.md
+++ b/_posts/Algorithm/DP/2022-02-02-813.LargestSumofAverages.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[DP]#813. Largest Sum of Averages"
+title: "[DP] #813. Largest Sum of Averages."
 categories: ["dp"]
 tag: [algorithm, dp]
 ---
