--- a/_posts/Algorithm/DP/2022-02-02-85.MaximalRectangle.md
+++ b/_posts/Algorithm/DP/2022-02-02-85.MaximalRectangle.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[DP]#85. Maximal Rectangle"
+title: "[DP] #85. Maximal Rectangle."
 categories: ["dp"]
 tag: [algorithm, dp]
 ---
