--- a/_posts/Algorithm/DP/2022-02-02-873.LengthofLongestFibonacciSubsequence.md
+++ b/_posts/Algorithm/DP/2022-02-02-873.LengthofLongestFibonacciSubsequence.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[DP]#873. Length of Longest Fibonacci Subsequence"
+title: "[DP] #873. Length of Longest Fibonacci Subsequence."
 categories: ["dp"]
 tag: [algorithm, dp]
 ---
