--- a/_posts/Algorithm/DP/2022-02-02-935.KnightDialer.md
+++ b/_posts/Algorithm/DP/2022-02-02-935.KnightDialer.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[DP]#935. Knight Dialer"
+title: "[DP] #935. Knight Dialer."
 categories: ["dp"]
 tag: [algorithm, dp]
 ---
