--- a/_posts/Algorithm/DP/2022-02-02-95.UniqueBinarySearchTreesII.md
+++ b/_posts/Algorithm/DP/2022-02-02-95.UniqueBinarySearchTreesII.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[DP]#95. Unique Binary Search Trees II"
+title: "[DP] #95. Unique Binary Search Trees II."
 categories: ["dp"]
 tag: [algorithm, dp]
 ---
