--- a/_posts/Algorithm/DP/2022-02-02-96.UniqueBinarySearchTrees.md
+++ b/_posts/Algorithm/DP/2022-02-02-96.UniqueBinarySearchTrees.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[DP]#96. Unique Binary Search Trees"
+title: "[DP] #96. Unique Binary Search Trees."
 categories: ["dp"]
 tag: [algorithm, dp]
 ---
