--- a/_posts/Python/2022-02-02-migrate.md
+++ b/_posts/Python/2022-02-02-migrate.md
@@ -1,8 +1,8 @@
 ---
 layout: single
-title: "Automatic migration of files to Jekyll _posts directory"
+title: "Automatic file migration to Jekyll _posts directory"
 categories: ["Python"]
-tag: [automation, python]
+tag: [automation, jekyll, minimal-mistakes, python]
 author_profile: true
 sidebar_main: true
 ---
@@ -32,28 +32,39 @@ Here's a list of `.cpp` files that I want to migrate.
 
 ![img](../../assets/images/Python/migrate.png)
 
-I created `migrate.py` which does all the job. Let's look inside.
+Below is the `migrate.py` which does all the job. Let's look inside.
+
+- Modify the configurations accordingly.
+- The files you want to migrate must reside in the **same directory**. It's okay that other files or directories are in the same location.
+  Only the files with given `EXTENSION` will be migrated (copied).
+- Run the `migrate.py` in the same directory as your files as shown above in the picture.
 
 ````python
 import os
 import sys
-import re # regex module
+import re
 
-# Move to the directory where all your codes are residing.
+fname_list = os.listdir()
 
-fname_list = os.listdir() # Get the list of files in the current dir
-category_title = 'DP' # This is just something that goes in the title for github.io
-category = 'dp' # category name
-date = '2022-02-02-' # posting date
+# CONFIGURATIONS - Modify Below
+######################################################################################
+EXTENSION = 'cpp' # Original extension of your files
+DEST_LOCATION = '~/Desktop/jasonlee-github-blog/JasonLee-cp.github.io/_posts/Algorithm/DP/' # Destination location in Jekyll
+TITLE_PREFIX = '[DP] ' # This is for "[category] title..." format. Replace with '' if you don't need it.
+POST_CATEGORY = 'dp' # Jekyll post category
+POSTING_DATE = '2022-02-02-' # Posting date
+TAGS = ['algorithm', 'dp'] # List of tags for your post
+REMOVE_LIST = ['#', ' '] # Remove from ".md" file name. Not the post title. The title will be the same as original file name with extension removed.
+#######################################################################################
 
-# Loop over all the files
 for fname in fname_list:
-    if os.path.isdir(fname): # skip if it's directory
+    if os.path.isdir(fname): # skip if it's a dir
+        break
+    if not fname.endswith(f'.{EXTENSION}'): # only covert files with given extension
         break
 
-    # The header for jekyll post.
     with open(fname, 'r') as file:
-        contents = f'---\nlayout: single\ntitle: "[{category_title}]{fname[:-4]}"\ncategories: ["{category}"]\ntag: [algorithm, {category}]\n---\n```cpp\n'
+        contents = f'---\nlayout: single\ntitle: "{TITLE_PREFIX}{fname[:-1*len(EXTENSION)]}"\ncategories: ["{POST_CATEGORY}"]\ntag: [{", ".join(TAGS)}]\n---\n```{EXTENSION}\n'
         while True:
             line = file.readline()
             if not line:
@@ -62,25 +73,32 @@ for fname in fname_list:
 
     contents += '\n```'
 
-    # file name processing
-    fname = re.sub('.cpp', '.md', fname.strip()) # convert .cpp to .md / remove whitespaces
-    fname = re.sub('#','',fname) # remove #
-    fname = re.sub("\s","",fname)# remove whitespaces
-    fname = f'{date}'+fname # jekyll(minimal-mistakes) file name format
+    # convert .cpp to .md / remove whitespaces
+    fname = re.sub(f'.{EXTENSION}', '.md', fname.strip())
+
+    # Remove from '.md' file name, NOT from the post title
+    for remove in REMOVE_LIST:
+        remove = '\s' if remove == ' ' else remove
+        fname = re.sub(remove,'', fname)
+
+    fname = POSTING_DATE + fname.strip()
 
     # write file
-    f = open(f'./mdfiles/{fname}','w') # create mdfiles/ dir and save there
+    f = open(f'./mdfiles/{fname}','w')
     f.write(contents)
     f.close()
 
+os.system(f"cp ./mdfiles/* {DEST_LOCATION}")
+
+print("Migration Complete")
 ````
 
 After you run the file, you'll see the converted files are saved in `mdfiles/` directory. Let's see.
 
 ![img](../../assets/images/Python/migrate2.png)
 
-Now let's look one of the files if it's correctly converted.
+Now let's look at one of the files if it's correctly converted.
 
 ![img](../../assets/images/Python/migrate3.png)
 
-Great. Everything seems good. Now move all these files into whatever location you created under `_posts`.
+Great. Everything seems good.
