--- a/_posts/Algorithm/DP/2022-02-02-198.HouseRobber.md
+++ b/_posts/Algorithm/DP/2022-02-02-198.HouseRobber.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[DP]#198. House Robber"
+title: "[DP] #198. House Robber."
 categories: ["dp"]
 tag: [algorithm, dp]
 ---
