--- a/_posts/Algorithm/DP/2022-02-02-264.UglyNumberII.md
+++ b/_posts/Algorithm/DP/2022-02-02-264.UglyNumberII.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[DP]#264. Ugly Number II"
+title: "[DP] #264. Ugly Number II."
 categories: ["dp"]
 tag: [algorithm, dp]
 ---
