--- a/_posts/Algorithm/DP/2022-02-02-322.CoinChange.md
+++ b/_posts/Algorithm/DP/2022-02-02-322.CoinChange.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[DP]#322. Coin Change"
+title: "[DP] #322. Coin Change."
 categories: ["dp"]
 tag: [algorithm, dp]
 ---
