--- a/_posts/Algorithm/DP/2022-02-02-357.CountNumberswithUniqueDigits.md
+++ b/_posts/Algorithm/DP/2022-02-02-357.CountNumberswithUniqueDigits.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[DP]#357. Count Numbers with Unique Digits"
+title: "[DP] #357. Count Numbers with Unique Digits."
 categories: ["dp"]
 tag: [algorithm, dp]
 ---
