--- a/_posts/Algorithm/DP/2022-02-02-377.CombinationSumIV.md
+++ b/_posts/Algorithm/DP/2022-02-02-377.CombinationSumIV.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[DP]#377. Combination Sum IV"
+title: "[DP] #377. Combination Sum IV."
 categories: ["dp"]
 tag: [algorithm, dp]
 ---
