--- a/_posts/Algorithm/DP/2022-02-02-467.UniqueSubstringsinWraparoundString.md
+++ b/_posts/Algorithm/DP/2022-02-02-467.UniqueSubstringsinWraparoundString.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[DP]#467. Unique Substrings in Wraparound String"
+title: "[DP] #467. Unique Substrings in Wraparound String."
 categories: ["dp"]
 tag: [algorithm, dp]
 ---
