--- a/_posts/Algorithm/DP/2022-02-02-673.NumberofLongestIncreasingSubsequence.md
+++ b/_posts/Algorithm/DP/2022-02-02-673.NumberofLongestIncreasingSubsequence.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[DP]#673. Number of Longest Increasing Subsequence"
+title: "[DP] #673. Number of Longest Increasing Subsequence."
 categories: ["dp"]
 tag: [algorithm, dp]
 ---
