--- a/_posts/Algorithm/DP/2022-02-02-97.InterleavingString.md
+++ b/_posts/Algorithm/DP/2022-02-02-97.InterleavingString.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[DP]#97. Interleaving String"
+title: "[DP] #97. Interleaving String."
 categories: ["dp"]
 tag: [algorithm, dp]
 ---
