--- a/_posts/Paper/2022-02-02-AlexNet.md
+++ b/_posts/Paper/2022-02-02-AlexNet.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[Paper] ImageNet Classification with Deep Convolutional Neural Networks (AlexNet)"
+title: "[Paper] AlexNet - ImageNet Classification with Deep Convolutional Neural Networks"
 categories: paper
 tag: [deeplearning, pytorch, paper]
 author_profile: true
