--- a/_posts/Python/2022-02-13-osmodule.md
+++ b/_posts/Python/2022-02-13-osmodule.md
@@ -96,7 +96,7 @@ print(os.listdir())
 
 > ### `os.remove(path)`
 
-`os.remove()` removes the **file** path. It raises an `IsADirectoryError` exception.
+`os.remove()` removes the **file** path. It raises an `IsADirectoryError` exception if path refers to a directory.
 
 ```python
 back_to_base()
