--- a/_posts/C++/2022-02-21-Queue.md
+++ b/_posts/C++/2022-02-21-Queue.md
@@ -1,8 +1,8 @@
 ---
 layout: single
-title: "[C++]Queue"
-categories: ["C++"]
-tag: [C++]
+title: "[c++]Queue"
+categories: ["c++"]
+tag: [c++]
 author_profile: true
 sidebar_main: true
 ---
