--- a/_posts/C++/2022-02-21-Stack.md
+++ b/_posts/C++/2022-02-21-Stack.md
@@ -1,8 +1,8 @@
 ---
 layout: single
-title: "[c++]Stack"
-categories: ["c++"]
-tag: [c++]
+title: "[C++]Stack"
+categories: ["C++"]
+tag: [C++]
 author_profile: true
 sidebar_main: true
 ---
