--- a/_posts/Algorithm/2022-02-22-Stack.md
+++ b/_posts/Algorithm/2022-02-22-Stack.md
@@ -1,8 +1,8 @@
 ---
 layout: single
-title: "[c++]Stack"
-categories: ["c++"]
-tag: [c++]
+title: "[c++]stack"
+categories: ["algorithm"]
+tag: [algorithm]
 author_profile: true
 sidebar_main: true
 ---
