--- a/_posts/Algorithm/2022-02-22-queue.md
+++ b/_posts/Algorithm/2022-02-22-queue.md
@@ -1,8 +1,8 @@
 ---
 layout: single
-title: "[c++]Queue"
-categories: ["c++"]
-tag: [c++]
+title: "[c++]queue"
+categories: ["algorithm"]
+tag: [algorithm]
 author_profile: true
 sidebar_main: true
 ---
