--- a/_posts/DataStructure/2022-02-22-Queue.md
+++ b/_posts/DataStructure/2022-02-22-Queue.md
@@ -89,10 +89,10 @@ void Queue:: push(int x){
 }
 
 int Queue::pop(){
-    int index_pop;      //dequeue된 요소를 저장하는 변수
+    int index_pop;      //dequeue된 요소를 저장하는 index
     if(isEmpty()){
         cout << "queue is empty\n";		//error
-        return 0;
+        return -1;
     }
     else if(head == tail){
         index_pop = arr[tail];   //dequeue된 수를 index_pop에 저장
