--- a/_posts/DataStructure/2022-02-22-Stack.md
+++ b/_posts/DataStructure/2022-02-22-Stack.md
@@ -10,7 +10,7 @@ sidebar_main: true
 
 > **Stack**
 
-스택(Stack) 은 후입선출(LIFO, Last In First Out) 의 특징을 가지고 있다. 즉, 스택은 먼저 들어간 데이터를 나중에 처리하는 자료구조이다.
+스택(Stack) 은 선입후출(First In Last Out), 후입선출(LIFO, Last In First Out) 의 특징을 가지고 있다. 즉, 스택은 먼저 들어간 데이터를 나중에 처리하는 자료구조이다.
 
 ---
 
