--- a/_posts/DataStructure/2022-02-22-Queue.md
+++ b/_posts/DataStructure/2022-02-22-Queue.md
@@ -9,7 +9,7 @@ sidebar_main: true
 
 > **Queue**
 
-큐(Queue)는 후입후출(LILO, Last In Last Out)선입선출(FIFO, First In First Out) 의 특징을 가지고 있다. 즉, 큐는 앞서 들어간 데이터를 먼저 처리하는 자료구조이다.
+큐(Queue)는 후입후출(LILO, Last In Last Out), 선입선출(FIFO, First In First Out) 의 특징을 가지고 있다. 즉, 큐는 앞서 들어간 데이터를 먼저 처리하는 자료구조이다.
 
 ---
 
