--- a/_posts/DataStructure/2022-02-22-Queue.md
+++ b/_posts/DataStructure/2022-02-22-Queue.md
@@ -2,7 +2,7 @@
 layout: single
 title: "[C++]Queue"
 categories: ["algorithm"]
-tag: [algorithm]
+tag: [datastructure]
 author_profile: true
 sidebar_main: true
 ---
