--- a/_posts/AVR/2022-03-26-LED1.md
+++ b/_posts/AVR/2022-03-26-LED1.md
@@ -1,7 +1,7 @@
 ---
 layout: single
 title: "[ATmega128]LED 점등"
-categories: ["avr"]
+categories: ["AVR"]
 tag: [ATmega128]
 author_profile: true
 sidebar_main: true
