--- a/_posts/AVR/2022-03-26-LED1.md
+++ b/_posts/AVR/2022-03-26-LED1.md
@@ -44,7 +44,7 @@ int main(void)
 ```#define F_CPU```로 AVR CPU의 동작 클럭을 설정한다. ATmega128은 초기 동작 클럭이 16MHz로 설정되어 있으므로 16000000으로 설정 해주었고, UL은 프로그래밍 단위로 unsigend long을 의미한다.
 
 
-```#include <avr/io.h>``` ```#include <util/delay.h```와 같은 .h는 헤더 파일을 포함시킨다는 뜻이다. 즉, 이미 만들어진 명령어들을 사용하는 것이다. <**avr/io.h**>는 input/output 명령어, <**util/delay.h**>는 time delay 명령어가 있다.
+```#include <avr/io.h>``` ```#include <util/delay.h```와 같은 .h는 헤더 파일을 포함시킨다는 뜻이다. 즉, 이미 만들어진 명령어들을 사용하는 것이다. **avr/io.h**는 input/output 명령어, **util/delay.h**는 time delay 명령어가 있다.
 
 ```cpp
 	DDRB = 0x01;
