--- a/_posts/AVR/2022-03-26-LED2.md
+++ b/_posts/AVR/2022-03-26-LED2.md
@@ -9,7 +9,7 @@ sidebar_main: true
 
 > **개요**
 
-처음 LED 제어와 비슷하게 2개의 LED를 번갈아가며 ON. OFF 소스코드를 짜보려고 한다. 한 가지 다른 점이 있다면 포트를 16진수로 표현하지 않고 ```#define _BV(bit)```을 통해 코드를 작성해보았다.  
+처음 LED 제어와 비슷하게 2개의 LED를 번갈아가며 ON. OFF되는 소스코드를 짜보려고 한다. 한 가지 다른 점이 있다면 포트를 16진수로 표현하지 않고 **#define**을 통해 코드를 작성해보았다.  
 
 > **하드웨어 구성**
 
@@ -61,3 +61,4 @@ DDRB = (greenLed | blueLed);
 	}
 ```
 이후  코딩 내용은 LED 점등과 동일하다.
+
