--- a/_posts/AVR/2022-03-26-LED1.md
+++ b/_posts/AVR/2022-03-26-LED1.md
@@ -1,21 +1,17 @@
 ---
 layout: single
-title: "[ATmega128]LED 점등"
+title: "[ATmega128]LED 제어"
 categories: ["AVR"]
 tag: [ATmega128]
 author_profile: true
 sidebar_main: true
 ---
 
-> **개요**
+가장 간단한 LED를 제어해보도록 한다. LED를 제어하는 것은 매우 쉬워보이나 동작되는 과정들을 확실히 이해하기 위해선 많은 배경 지식이 필요하다. LED 점등 과정을 몇 단계를 거쳐 천천히 하나씩 공부해보려 한다.
 
-가장 간단한 LED를 제어해보도록 한다. LED를 제어하는 것은 매우 쉬워보이나 동작되는 과정들을 확실히 이해하기 위해선 많은 배경 지식이 필요해보인다. LED 점등 과정을 몇 단계를 거쳐 천천히 하나씩 공부해보도록 하자!
-
-> **하드웨어 구성**
-
-> **소스코드**
-
-LED 한 개를 점등하는 소스코드의 전체적인 구성은 이렇다. 하나하나씩 살펴보도록 하자.
+## LED 점등
+> LED 한 개를 점등하는 소스코드의 전체적인 구성은 이렇다. 하나씩 살펴보도록 하자.
+ 
 ```cpp
 #define F_CPU 16000000UL
 #include <avr/io.h>
@@ -34,22 +30,24 @@ int main(void)
 }
 ```
 
-> **소스코드 구성**
+### 소스코드 구성 
 
 ```cpp
 #define F_CPU 16000000UL
 #include <avr/io.h>
 #include <util/delay.h>
 ```
-```#define F_CPU```로 AVR CPU의 동작 클럭을 설정한다. ATmega128은 초기 동작 클럭이 16MHz로 설정되어 있으므로 16000000으로 설정 해주었고, UL은 프로그래밍 단위로 unsigend long을 의미한다.
-
-
-```#include <avr/io.h>``` ```#include <util/delay.h```와 같은 .h는 헤더 파일을 포함시킨다는 뜻이다. 즉, 이미 만들어진 명령어들을 사용하는 것이다. **avr/io.h**는 input/output 명령어, **util/delay.h**는 time delay 명령어가 있다.
+*  AVR CPU 동작 클럭 설정 ```#define F_CPU```
+	* ATmega128은 초기 동작 클럭이 16MHz로 설정되어 있으므로 16000000으로 설정 해주었고, UL은 프로그래밍 단위로 unsigend long을 의미한다.
+* 헤더 파일
+	* ```#include <avr/io.h>``` ```#include <util/delay.h>```와 같은 .h는 헤더 파일을 포함시킨다는 뜻이다. 즉, 이미 만들어진 명령어들을 사용하는 것이다. 
+	* **avr/io.h**는 input/output 명령어, **util/delay.h**는 time delay 명령어가 있다.
 
 ```cpp
 	DDRB = 0x01;
 ```
-**DDRx**는 입출력 방향을 지정해주는 레지스터이다. 0x01은 16진수로 0b00000001을 뜻하고 각각의 위치는 0~7번 핀을 뜻한다. 즉, B포트의 0번 핀을 출력으로 설정해주었다.
+* **DDRx**는 입출력 방향을 지정해주는 레지스터이다. 
+* 0x01은 16진수로 0b00000001을 뜻한다. 즉, B포트의 0번 핀을 출력으로 설정해주었다.
 
 ```cpp
 	while (1)
@@ -61,4 +59,60 @@ int main(void)
 	}
 ```
 
-**PORTx**는 출력 설정 시 출력 값을 지정해주는 레지스터이다. 소스코드를 해석하면 B포트의 0번 핀을 HIGH(5V)로 설정하고 0.5초 동안 유지 후 0번 핀을 LOW(0V)로 설정한 후 0.5초간 유지를 반복하는 것이다.
+* **PORTx**는 출력 설정 시 출력 값을 지정해주는 레지스터이다. 
+* B포트의 0번 핀을 HIGH(5V)로 설정하고 0.5초 동안 유지 후 0번 핀을 LOW(0V)로 설정한 후 0.5초간 유지를 반복하는 것이다.
+
+
+## LED 교차 점등
+> LED 교차 점등의 전체적인 코드는 일반 LED 점등과 비슷하지만 약간의 차이점을 두었다. 하나씩 살펴보자.
+
+```cpp
+#define F_CPU 16000000UL
+#include <avr/io.h>
+#include <util/delay.h>
+
+#define greenLed 0x01
+#define blueLed	0x02
+
+int main(void)
+{
+	DDRB = (greenLed | blueLed);
+	while (1)
+	{
+		PORTB |= greenLed;
+		_delay_ms(500);
+		PORTB |= blueLed;
+		_delay_ms(500);
+	}
+}
+```
+
+### 소스코드 구성
+
+```cpp
+#define greenLed 0x01
+#define blueLed	0x02
+```
+
+* **#define** 포트 선언
+	* 16진수로 표현하던 포트를 **#define**으로 선언해 변수명으로 보다 직관적으로 볼 수 있게 했다.
+	* 수정사항을 직관적인 함수명, 변수명으로 보다 편리하게 수정할 수 있고 다른 사람이 이해하기도 편하다.
+
+```cpp 
+DDRB = (greenLed | blueLed); 
+```
+
+* 비트 연산자 **|**(bitswise OR)
+	* 비트 연산자 **|**(bitwise OR) 은 비트 두 개 중 하나 이상이 1이면 1로 판단하는 연산자이다.
+	* ```DDRB = (0b00000001 | 00000010)```은 **DDRB = 0b00000011**이 되는 것이다.
+
+```cpp
+	while (1)
+	{
+		PORTB = greenLed;
+		_delay_ms(500);
+		PORTB = blueLed;
+		_delay_ms(500);
+	}
+```
+* while 문 안의 내용은 이전 코딩 내용과 동일하다.
