--- a/_posts/AVR/2022-03-26-LED1.md
+++ b/_posts/AVR/2022-03-26-LED1.md
@@ -7,6 +7,7 @@ author_profile: true
 sidebar_main: true
 ---
 
+
 가장 간단한 LED를 제어해보도록 한다. LED를 제어하는 것은 매우 쉬워보이나 동작되는 과정들을 확실히 이해하기 위해선 많은 배경 지식이 필요하다. LED 점등 과정을 몇 단계를 거쳐 천천히 하나씩 공부해보려 한다.
 
 ## LED 점등
@@ -102,8 +103,8 @@ int main(void)
 DDRB = (greenLed | blueLed); 
 ```
 
-* 비트 연산자 **|**(bitswise OR)
-	* 비트 연산자 **|**(bitwise OR) 은 비트 두 개 중 하나 이상이 1이면 1로 판단하는 연산자이다.
+* 비트 연산자 ```|```(bitswise OR)
+	* 비트 연산자 ```|```(bitwise OR) 은 비트 두 개 중 하나 이상이 1이면 1로 판단하는 연산자이다.
 	* ```DDRB = (0b00000001 | 00000010)```은 **DDRB = 0b00000011**이 되는 것이다.
 
 ```cpp
