--- a/_posts/AVR/2022-03-26-LED1.md
+++ b/_posts/AVR/2022-03-26-LED1.md
@@ -11,7 +11,7 @@ sidebar_main: true
 가장 간단한 LED를 제어해보도록 한다. LED를 제어하는 것은 매우 쉬워보이나 동작되는 과정들을 확실히 이해하기 위해선 많은 배경 지식이 필요하다. LED 점등 과정을 몇 단계를 거쳐 천천히 하나씩 공부해보려 한다.
 
 ## LED 점등
-> LED 한 개를 점등하는 소스코드의 전체적인 구성은 이렇다. 하나씩 살펴보도록 하자.
+> LED 한 개를 점등하는 소스코드의 전체적인 구성은 이렇다. 하나씩 살펴보도록 하자.  
  
 ```cpp
 #define F_CPU 16000000UL
@@ -30,8 +30,10 @@ int main(void)
 	}
 }
 ```
+  
 
-### 소스코드 구성 
+### **소스코드 구성**  
+
 
 ```cpp
 #define F_CPU 16000000UL
@@ -48,7 +50,7 @@ int main(void)
 	DDRB = 0x01;
 ```
 * **DDRx**는 입출력 방향을 지정해주는 레지스터이다. 
-* 0x01은 16진수로 0b00000001을 뜻한다. 즉, B포트의 0번 핀을 출력으로 설정해주었다.
+* 0x01은 16진수로 0b00000001을 뜻한다. 즉, B포트의 0번 핀을 출력으로 설정해주었다.   
 
 ```cpp
 	while (1)
@@ -59,9 +61,10 @@ int main(void)
 		_delay_ms(500);
 	}
 ```
-
 * **PORTx**는 출력 설정 시 출력 값을 지정해주는 레지스터이다. 
-* B포트의 0번 핀을 HIGH(5V)로 설정하고 0.5초 동안 유지 후 0번 핀을 LOW(0V)로 설정한 후 0.5초간 유지를 반복하는 것이다.
+* B포트의 0번 핀을 HIGH(5V)로 설정하고 0.5초 동안 유지 후 0번 핀을 LOW(0V)로 설정한 후 0.5초간 유지를 반복하는 것이다.  
+
+
 
 
 ## LED 교차 점등
@@ -86,9 +89,11 @@ int main(void)
 		_delay_ms(500);
 	}
 }
-```
+```  
 
-### 소스코드 구성
+
+### 소스코드 구성  
+
 
 ```cpp
 #define greenLed 0x01
@@ -102,9 +107,8 @@ int main(void)
 ```cpp 
 DDRB = (greenLed | blueLed); 
 ```
-
 * 비트 연산자 ```|```(bitswise OR)
-	* 비트 연산자 ```|```(bitwise OR) 은 비트 두 개 중 하나 이상이 1이면 1로 판단하는 연산자이다.
+	* 비트 연산자 ```|```(bitwise OR)은 비트 두 개 중 하나 이상이 1이면 1로 판단하는 연산자이다.
 	* ```DDRB = (0b00000001 | 00000010)```은 **DDRB = 0b00000011**이 되는 것이다.
 
 ```cpp
