--- a/_posts/AVR/2022-03-26-LED1.md
+++ b/_posts/AVR/2022-03-26-LED1.md
@@ -10,9 +10,13 @@ sidebar_main: true
 
 ## LED 점등
 
+
 가장 간단한 LED를 제어해보도록 한다. LED를 제어하는 것은 매우 쉬워보이나 동작되는 과정들을 확실히 이해하기 위해선 많은 배경 지식이 필요하다. LED 점등 과정을 몇 단계를 거쳐 천천히 하나씩 공부해보려 한다.
 
+
+
 ### 하드웨어 설계
+> PIN 10 = PB0, PIN 63 = GND
 
 ![blog](https://github.com/JiJinWoo/JiJinWoo.github.io/blob/master/assets/images/avrblog/led1.PNG?raw=true "PIN 10 = PB0, 63 = GND")
 
@@ -38,7 +42,7 @@ int main(void)
 }
 ```
   
-  ### 소스코드 구성 #
+  ### 소스코드 구성
 
 ```cpp
 #define F_CPU 16000000UL
@@ -74,7 +78,10 @@ int main(void)
 
 ## LED 교차 점등
 
-### 하드웨어 설계 
+
+### 하드웨어 설계  
+> PIN 10 = PB0, PIN 11 = PB1, PIN 63 = GND  
+
 ![blog](https://github.com/JiJinWoo/JiJinWoo.github.io/blob/master/assets/images/avrblog/led2.PNG?raw=true "PIN 10 = PB0, 11 = PB1, 63 = GND")
 
 
@@ -105,7 +112,7 @@ int main(void)
 ```  
 
 
-### 소스코드 구성 #
+### 소스코드 구성
 
 ```cpp
 #define greenLed 0x01
