--- a/_posts/AVR/2022-03-26-LED1.md
+++ b/_posts/AVR/2022-03-26-LED1.md
@@ -7,16 +7,17 @@ author_profile: true
 sidebar_main: true
 ---
 
+# LED 점등
+
 가장 간단한 LED를 제어해보도록 한다. LED를 제어하는 것은 매우 쉬워보이나 동작되는 과정들을 확실히 이해하기 위해선 많은 배경 지식이 필요하다. LED 점등 과정을 몇 단계를 거쳐 천천히 하나씩 공부해보려 한다.
 
-## LED 점등
+## **하드웨어 설계**
 
-### **하드웨어 설계**
-|![blog](https://github.com/JiJinWoo/JiJinWoo.github.io/blob/master/assets/images/avrblog/led1.PNG?raw=true )| 
-|:--:| 
+|![blog](https://github.com/JiJinWoo/JiJinWoo.github.io/blob/master/assets/images/avrblog/led1.PNG?raw=true )|
+|:--:|
 |[PIN 10=PB0, 63=GND]|
 
-### **전체 소스코드**
+## 소스코드
 > LED 한 개를 점등하는 소스코드의 전체적인 구성은 이렇다. 하나씩 살펴보도록 하자.  
 
 ```cpp
@@ -37,7 +38,7 @@ int main(void)
 }
 ```
 
-### **소스코드 구성**  
+## 소스코드 구성 
 
 ```cpp
 #define F_CPU 16000000UL
@@ -68,14 +69,17 @@ int main(void)
 * **PORTx**는 출력 설정 시 출력 값을 지정해주는 레지스터이다. 
 * B포트의 0번 핀을 HIGH(5V)로 설정하고 0.5초 동안 유지 후 0번 핀을 LOW(0V)로 설정한 후 0.5초간 유지를 반복하는 것이다.  
 
-## LED 교차 점등
+# LED 교차 점등
 
-### **하드웨어 설계**
-|![blog](https://github.com/JiJinWoo/JiJinWoo.github.io/blob/master/assets/images/avrblog/led2.PNG?raw=true)| 
-|:--:| 
+LED 교차 점등은 이전에 했던 LED 점등과 매우 유사하다. 하지만 소스코드 부분에서 조금 변경한 부분이 있다.
+
+## 하드웨어 설계
+
+| ![blog](https://github.com/JiJinWoo/JiJinWoo.github.io/blob/master/assets/images/avrblog/led2.PNG?raw=true)  |
+|:---:|
 |[PIN 10=PB0, 11=PB1, 63=GND]|
 
-### **전체 소스코드**
+## 소스코드
 > LED 교차 점등의 전체적인 코드는 일반 LED 점등과 비슷하지만 약간의 차이점을 두었다. 하나씩 살펴보자.
 
 ```cpp
@@ -100,7 +104,7 @@ int main(void)
 ```  
 
 
-### **소스코드 구성**  
+## 소스코드 구성
 
 ```cpp
 #define greenLed 0x01
