--- a/_posts/AVR/2022-03-26-LED2.md
+++ b/_posts/AVR/2022-03-26-LED2.md
@@ -1,10 +1,13 @@
 ---
 layout: single
-title: "[ATmega128]LED 교차 점등"
+title: "[ATmega128] 스위치를 이용한 LED 점등"
 categories: ["AVR"]
 tag: [ATmega128]
-author_profile: true
-sidebar_main: true
+
+toc: true
+toc_label: "Table of Contents"
+toc_icon: "align-justify" # corresponding Font Awesome icon name (without fa prefix)
+toc_sticky: true
 ---
 
 ># 스위치를 이용한 LED 점등
