--- a/_posts/AVR/2022-03-26-LED1.md
+++ b/_posts/AVR/2022-03-26-LED1.md
@@ -10,17 +10,17 @@ toc_icon: "align-justify" # corresponding Font Awesome icon name (without fa pre
 toc_sticky: true
 ---
 
-> ## LED 점등
+> # LED 점등
 
 가장 간단한 LED를 제어해보도록 한다. LED를 제어하는 것은 매우 쉬워보이나 동작되는 과정들을 확실히 이해하기 위해선 많은 배경 지식이 필요하다. LED 점등 과정을 몇 단계를 거쳐 천천히 하나씩 공부해보려 한다.
 
-### 하드웨어 설계
+## 하드웨어 설계
 
 |![blog](https://github.com/JiJinWoo/JiJinWoo.github.io/blob/master/assets/images/avrblog/led1.PNG?raw=true )|
 |:--:|
 |*[PIN 10=PB0, 63=GND]*|
 
-### 소스코드
+## 소스코드
 LED 한 개를 점등하는 소스코드의 전체적인 구성은 이렇다. 하나씩 살펴보도록 하자.  
 
 ```cpp
@@ -41,7 +41,7 @@ int main(void)
 }
 ```
 
-### 소스코드 구성 
+## 소스코드 구성 
 
 ```cpp
 #define F_CPU 16000000UL
@@ -76,13 +76,13 @@ int main(void)
 
 LED 교차 점등은 이전에 했던 LED 점등과 매우 유사하다. 하지만 소스코드 부분에서 조금 변경한 부분이 있다.
 
-### 하드웨어 설계
+## 하드웨어 설계
 
 | ![blog](https://github.com/JiJinWoo/JiJinWoo.github.io/blob/master/assets/images/avrblog/led2.PNG?raw=true)  |
 |:---:|
 |*[PIN 10=PB0, 11=PB1, 63=GND]*|
 
-### 소스코드
+## 소스코드
 LED 교차 점등의 전체적인 코드는 일반 LED 점등과 비슷하지만 약간의 차이점을 두었다. 하나씩 살펴보자.
 
 ```cpp
@@ -107,7 +107,7 @@ int main(void)
 ```  
 
 
-### 소스코드 구성
+## 소스코드 구성
 
 ```cpp
 #define greenLed 0x01
