--- a/_posts/AVR/2022-03-26-LED1.md
+++ b/_posts/AVR/2022-03-26-LED1.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[ATmega128] LED 점등"
+title: "[ATmega128]LED 점등"
 categories: ["AVR"]
 tag: [ATmega128]
 
@@ -72,7 +72,7 @@ int main(void)
 * **PORTx**는 출력 설정 시 출력 값을 지정해주는 레지스터이다. 
 * B포트의 0번 핀을 HIGH(5V)로 설정하고 0.5초 동안 유지 후 0번 핀을 LOW(0V)로 설정한 후 0.5초간 유지를 반복하는 것이다.  
 
-> ## LED 교차 점등
+> # LED 교차 점등
 
 LED 교차 점등은 이전에 했던 LED 점등과 매우 유사하다. 하지만 소스코드 부분에서 조금 변경한 부분이 있다.
 
