--- a/_posts/AVR/2022-03-26-LED1.md
+++ b/_posts/AVR/2022-03-26-LED1.md
@@ -74,7 +74,7 @@ int main(void)
 
 ># LED 교차 점등
 
-LED 교차 점등은 이전에 했던 LED 점등과 매우 유사하다. 하지만 소스코드 부분에서 조금 변경한 부분이 있다.
+LED 교차 점등은 이전에 했던 LED 점등과 유사하지만 소스코드 부분에서 조금 변경한 부분이 있다.
 
 ## 하드웨어 설계
 
@@ -122,7 +122,7 @@ DDRB = (greenLed | blueLed);
 ```
 * 비트 연산자 ```|```(bitswise OR)
 	* 비트 연산자 ```|```(bitwise OR)은 비트 두 개 중 하나 이상이 1이면 1로 판단하는 연산자이다.
-	* **DDRB = (0b00000001 | 00000010)** 은 **DDRB = 0b00000011**이 되는 것이다.
+	* DDRB = (0b00000001 | 00000010)은 **DDRB = 0b00000011**이 되는 것이다.
 
 ```cpp
 	while (1)
