--- a/_posts/AVR/2022-03-26-LED2.md
+++ b/_posts/AVR/2022-03-26-LED2.md
@@ -1,7 +1,7 @@
 ---
 layout: single
 title: "[ATmega128]스위치를 이용한 LED 점등"
-categories: ["AVR"]
+categories: ["ATmega128 기초"]
 tag: [ATmega128]
 
 toc: true
