--- a/_posts/AVR/2022-03-26-LED1.md
+++ b/_posts/AVR/2022-03-26-LED1.md
@@ -1,7 +1,7 @@
 ---
 layout: single
 title: "[ATmega128]LED 점등"
-categories: ["AVR"]
+categories: ["ATmega128 기초"]
 tag: [ATmega128]
 
 toc: true
@@ -105,7 +105,7 @@ int main(void)
 }
 ```  
 
-
+~
 ## 소스코드 구성
 
 ```cpp
