--- a/_posts/AVR/2022-03-26-LED1.md
+++ b/_posts/AVR/2022-03-26-LED1.md
@@ -1,7 +1,7 @@
 ---
 layout: single
 title: "[ATmega128]LED 점등"
-categories: ["ATmega128 기초"]
+categories: ["foundation"]
 tag: [ATmega128]
 
 toc: true
