--- a/_posts/AVR/2022-03-28-LED2.md
+++ b/_posts/AVR/2022-03-28-LED2.md
@@ -1,7 +1,7 @@
 ---
 layout: single
 title: "[ATmega128]스위치를 이용한 LED 점등"
-categories: ["foundation"]
+categories: ["AVR"]
 tag: [ATmega128]
 
 toc: true
