--- a/_posts/AVR/2022-03-28-LED2.md
+++ b/_posts/AVR/2022-03-28-LED2.md
@@ -12,10 +12,9 @@ toc_sticky: true
 
 ># 스위치를 이용한 LED 점등
 
-스위치를 이용해 LED를 제어해보려 한다. 풀업 저항으로로 구성해 스위치를 누른 상태에서 LED가 켜지고 스위치에서 손을 때면 불이 꺼지도록 설계했다.   
+스위치를 이용해 LED를 제어해보려 한다. 풀업 저항으로 구성해 스위치를 누른 상태에서 LED가 켜지고 스위치에서 손을 때면 불이 꺼지도록 설계했다.   
 
-스위츠를 이용해 LED를 제어하는 회로는 풀업 저항을 구성하는데에서 기초적인 전자 지식이 필요하다. 그 전에 풀업 저항을 구성해야하는 원인인 플로팅 현상을 살펴보자.
-
+스위츠를 이용해 LED를 제어하는 회로는 풀업 저항을 구성하는데에서 기초적인 전자 지식이 필요하다. 
 
 ## 플로팅(floating) 현상
 
@@ -50,16 +49,19 @@ toc_sticky: true
 |:--:|
 |*[reference](https://k96-ozon.tistory.com/59)*|
 
-* 스위치가 닫힌 상태에서는 
+* 스위치가 닫힌 상태에서는 전류는 입력 핀쪽으로 흐르게 되고 입력 핀에는 **HIGH(5V)** 값이 읽히게 된다.
 
 |![blog](https://github.com/JiJinWoo/JiJinWoo.github.io/blob/master/assets/images/avrblog/pulldown2.PNG?raw=true)|
 |:--:|
 |*[reference](https://k96-ozon.tistory.com/59)*|
 
+|풀업저항|스위치 ON|스위치 OFF||풀다운저항|스위치 ON|스위치 OFF|
+|:---:|:---:|:---:|:--:|:--:|:--:|:--:|
+|값|0V(LOW)|5V(HIGH)||값|5V(HIGH)|0V(LOW)
 
-
-
-하지만 AVR 내부 회로에 모든 핀이 **PULL-UP** 저항을 가지고 있다. PORTx 블럭의 레지스터 값을 조정하면 **PULL-UP** 저항을 활성화 혹은 비활성화 시킬 수 있다. 자세한 사항은 **소스코드 구성**에서 살펴보도록 하겠다.
+### 참고
+---
+AVR 내부 회로에 모든 핀이 **PULL-UP** 저항을 가지고 있다. PORTx 블럭의 레지스터 값을 조정하면 **PULL-UP** 저항을 활성화 혹은 비활성화 시킬 수 있다. 자세한 사항은 **소스코드 구성**에서 살펴보도록 하겠다.
 
 
 ## 하드웨어 설계
@@ -121,9 +123,3 @@ int main(void)
 * **if else** 구문
 	* if 구문에선 스위치를 누르지 않은 상태에선 PORTB의 모든 핀은 **LOW(0V)** 상태이다.
 	* else 구문에선 **PINB & sw**를 제외한 모든 상태에서 PORTB의 0번 핀은 **HIGH(5V)** 상태이다.
-
-
-
-| | 스위치 ON | 스위치 OFF| 
-|:---:|:---:| :---:|
-| 값 | 0V(LOW) | 5V(HIGH) |
