--- a/_posts/AVR/2022-03-28-ATmega128.md
+++ b/_posts/AVR/2022-03-28-ATmega128.md
@@ -1,7 +1,7 @@
 ---
 layout: single
 title: "[ATmega128]ATmega128 제어"
-categories: ["AVR"]
+categories: ["theory"]
 tag: [ATmega128]
 author_profile: true
 sidebar_main: true
