--- a/_posts/AVR/2022-03-28-ATmega128.md
+++ b/_posts/AVR/2022-03-28-ATmega128.md
@@ -1,19 +1,45 @@
 ---
 layout: single
-title: "[ATmega128]ATmega128 제어"
+title: "[ATmega128]ATmega128 입출력"
 categories: ["theory"]
 tag: [ATmega128]
-author_profile: true
-sidebar_main: true
+
+toc: true
+toc_label: "Table of Contents"
+toc_icon: "align-justify" # corresponding Font Awesome icon name (without fa prefix)
+toc_sticky: true
 ---
 
-> **개요**
+># ATmega128 입출력
 
-필자도 ATmega128을 배우는 입장으로서 공부하는겸 블로그를 포스팅할 예정이다. 처음 파트에서 기본적인 ATmega128을 다루는데 필요한 레지스터들을 정리했다. 이후 배울 것들은 차례로 포스팅할 예정이다.
+필자도 ATmega128을 배우는 입장으로서 지식이 부족하지만 공부하는겸 블로그를 포스팅할 예정이다.
 
-> **DDRx** : 입출력 방향 설정 레지스터(A~F)
+## I/O(In/Out) 레지스터
 
-![BLOG](https://github.com/JiJinWoo/JiJinWoo.github.io/blob/master/assets/images/blog/DDRB.PNG?raw=true)
+ATmega128에는 7개의 포트, 53개의 I/O핀을 가지고 있다. 각 포트는 내부 풀업 저항을 보유하고 있고 8비트 양방향 입출력 단자를 가지고 있다.
+
+* PORTA(PA7~PA0)
+	* 외부메모리 경우 주소버스와 데이터버스로 사용
+* PORTB(PB7~PB0)
+	*	SPI용 단자 또는 PWM단자로 사용
+* PORTC(PC7~PC0)
+	*	외부메모리 경우 주소버스로 사용
+* PORTD(PD7~PD0)
+	*	외부인터럽트 단자 또는 타이머 단자로 사용
+* PORTE(PE7~PE0)
+	*	타이머 단자, 외부인터럽트 단자, 아날로그 비교기, USART용 단자로 사용
+* PORTF(PF7~PF0)
+	* AD변환기 또는 JTAG 단자로 사용
+* PORTG(PG7~PG0)
+	* 외부 메모리 접속을 위한 스트로브 신호, RTC 타이머 발진기 단자로 사용
+
+
+## DDRx : 입출력 방향 설정 레지스터(x : A~F)
+
+|![blog](https://github.com/JiJinWoo/JiJinWoo.github.io/blob/master/assets/images/blog/DDRB.PNG?raw=true)|
+|:--:|
+|*[DDRx (Reference : ATmega128 datasheet page 87)]*|
+
 * A~F 포트의 8개 핀이 입출력 방향을 설정한다. 즉, 핀을 출력으로 쓸 것인지 입력으로 쓸 것인지 결정하는 레지스터이다.
 * 핀에 해당하는 비트가 0이면 입력, 1이면 출력으로 설정된다.
 * 입력으로 설정 시, **PINx** 레지스터를 통해 핀의 입력 신호를 설정할 수 있다.
@@ -25,23 +51,29 @@ DDRB = 0x2c;	//0x2c는 각각 16진수를 나타내며 0010 1100으로 B포
 				//트의 2, 3, 5 핀 출력. 그 외 핀을 입력으로 설정
 ```
 
-> **PORTx** : 출력 신호 데이터 레지스터(A~F)
+## PORTx : 출력 신호 데이터 레지스터(x : A~F)
 
-![blog](https://github.com/JiJinWoo/JiJinWoo.github.io/blob/master/assets/images/blog/PORTB.PNG?raw=true)
+|![blog](https://github.com/JiJinWoo/JiJinWoo.github.io/blob/master/assets/images/blog/PORTB.PNG?raw=true)|
+|:--:|
+|*[PORTx (Reference : ATmega128 datasheet page 87)]*|
+
 * 핀이 출력으로 설정된 경우 A~F 포트의 8개 핀의 출력값을 결정한다.
 * 핀에 해당하는 비트가 0이면 LOW(0V), 1이면 HIGH(5V) 신호를 출력한다.
 
 ```cpp
-DDRB = 0x01		//B포트의 0번 핀을 출력으로 설정하고 나머지 핀을 입력으로 설정
+PORTB = 0x01		//B포트의 0번 핀을 HIGH로 설정
 ```
 
-> **PINx** : 입력 신호 데이터 레지스터(A~F)
+## PINx : 입력 신호 데이터 레지스터(x : A~F)
 
-![blog](https://github.com/JiJinWoo/JiJinWoo.github.io/blob/master/assets/images/blog/PINB.PNG?raw=true)
+|![blog](https://github.com/JiJinWoo/JiJinWoo.github.io/blob/master/assets/images/blog/PINB.PNG?raw=true)|
+|:--:|
+|*[PINx (Reference : ATmega128 datasheet page 87)]*|
+
 * 핀이 입력으로 설정된 경우 A~F 포트의 8개 핀의 입력 값을 읽는다.
 * 핀에 해당하는 비트가 0이면 LOW(0V), 1이면 HIGH(5V) 신호가 저장된다.
 * **PINx**는 읽기만 가능한 레지스터로 특정 값을 지정하는 것은 불가하다.
 
-```cpp
-PINB = 0x01;		//B포트의 모든 핀을 입력으로 설정
-```
+### Reference
+
+[1] [ATmega128 datasheet (https://www.alldatasheet.com/view.jsp?Searchword=Atmega128%20datasheet&gclid=CjwKCAjwxZqSBhAHEiwASr9n9BnM2BYUT8UYk14wDrEEu2xSXP17kQdJLfsgKoZNEAQW1gyPJWnHxBoCnYgQAvD_BwE)](https://www.alldatasheet.com/view.jsp?Searchword=Atmega128%20datasheet&gclid=CjwKCAjwxZqSBhAHEiwASr9n9BnM2BYUT8UYk14wDrEEu2xSXP17kQdJLfsgKoZNEAQW1gyPJWnHxBoCnYgQAvD_BwE)*]  
