--- a/_posts/AVR/2022-03-28-ATmega128.md
+++ b/_posts/AVR/2022-03-28-ATmega128.md
@@ -18,19 +18,19 @@ toc_sticky: true
 
 ATmega128에는 7개의 포트, 53개의 I/O핀을 가지고 있다. 각 포트는 내부 풀업 저항을 보유하고 있고 8비트 양방향 입출력 단자를 가지고 있다.
 
-* PORTA(PA7~PA0)
+* **PORTA(PA7~PA0)**
 	* 외부메모리 경우 주소버스와 데이터버스로 사용
-* PORTB(PB7~PB0)
+* **PORTB(PB7~PB0)**
 	*	SPI용 단자 또는 PWM단자로 사용
-* PORTC(PC7~PC0)
+* **PORTC(PC7~PC0)**
 	*	외부메모리 경우 주소버스로 사용
-* PORTD(PD7~PD0)
+* **PORTD(PD7~PD0)**
 	*	외부인터럽트 단자 또는 타이머 단자로 사용
-* PORTE(PE7~PE0)
+* **PORTE(PE7~PE0)**
 	*	타이머 단자, 외부인터럽트 단자, 아날로그 비교기, USART용 단자로 사용
-* PORTF(PF7~PF0)
+* **PORTF(PF7~PF0)**
 	* AD변환기 또는 JTAG 단자로 사용
-* PORTG(PG7~PG0)
+* **PORTG(PG7~PG0)**
 	* 외부 메모리 접속을 위한 스트로브 신호, RTC 타이머 발진기 단자로 사용
 
 
@@ -76,4 +76,5 @@ PORTB = 0x01		//B포트의 0번 핀을 HIGH로 설정
 
 ### Reference
 
-[1] [ATmega128 datasheet (https://www.alldatasheet.com/view.jsp?Searchword=Atmega128%20datasheet&gclid=CjwKCAjwxZqSBhAHEiwASr9n9BnM2BYUT8UYk14wDrEEu2xSXP17kQdJLfsgKoZNEAQW1gyPJWnHxBoCnYgQAvD_BwE)](https://www.alldatasheet.com/view.jsp?Searchword=Atmega128%20datasheet&gclid=CjwKCAjwxZqSBhAHEiwASr9n9BnM2BYUT8UYk14wDrEEu2xSXP17kQdJLfsgKoZNEAQW1gyPJWnHxBoCnYgQAvD_BwE)*]  
+[1] [ATmega128 datasheet](https://www.alldatasheet.com/view.jsp?Searchword=Atmega128%20datasheet&gclid=CjwKCAjwxZqSBhAHEiwASr9n9BnM2BYUT8UYk14wDrEEu2xSXP17kQdJLfsgKoZNEAQW1gyPJWnHxBoCnYgQAvD_BwE)
+[2] [https://m.blog.naver.com/PostView.naver?blogId=gjs1029&logNo=221084124516&targetKeyword=&targetRecommendationCode=1](https://m.blog.naver.com/PostView.naver?blogId=gjs1029&logNo=221084124516&targetKeyword=&targetRecommendationCode=1)
