--- a/_posts/AVR/2022-03-28-ATmega128.md
+++ b/_posts/AVR/2022-03-28-ATmega128.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[ATmega128]ATmega128 입출력"
+title: "[ATmega128]ATmega128 I/0(입출력)"
 categories: ["theory"]
 tag: [ATmega128]
 
