--- a/_posts/AVR/2022-04-04-7segment.md
+++ b/_posts/AVR/2022-04-04-7segment.md
@@ -9,3 +9,120 @@ toc_label: "Table of Contents"
 toc_icon: "align-justify" # corresponding Font Awesome icon name (without fa prefix)
 toc_sticky: true
 ---
+
+># 7segment Timer/Counter
+
+이론 파트에서 정리한 Timer/Counter로 7segment를 제어해보려 한다. 
+
+## 하드웨어 설계
+
+|![blog](https://github.com/JiJinWoo/JiJinWoo.github.io/blob/master/assets/images/avrblog/7segment.PNG?raw=true)|
+|:---:|
+|*[7segment (Reference : https://m.blog.naver.com/gjs1029/221120105935)](https://m.blog.naver.com/gjs1029/221120105935)*|
+
+## 소스코드
+
+```cpp
+#define F_CPU 16000000UL
+#include <avr/io.h>
+#include <avr/interrupt.h>
+
+unsigned char FND[10] = {0x3f, 0x06, 0x5b, 0x4f, 0x66, 0x6d, 0x7d, 0x27, 0x7f, 0x67};
+static unsigned int count, i;
+
+ISR(TIMER0_OVF_vect){
+	count++;			//count는 오버플로우 발생 횟수를 저장하는 변수
+	if(count > 1000){	//1ms마다 오버플로우가 발생하니까 1초마다 카운트가 되게하려면 1ms*1000 = 1s가 되어야 한다
+		i++;			//FND출력값 증가
+		count = 0;		//오버플로우 발생 횟수 초기화
+		if(i > 9){		//FND에 출력되는 숫자가 9를 넘으면
+			i = 0;		//FND 출력 숫자 초기화
+			PORTB = FND[i];	//초기화한 FND 출력
+		}
+		else PORTB = FND[i];	//FND에 출력되는 숫자가 9를 넘지않으면 FND 출력
+	}
+}
+
+int main(void){
+	DDRB = 0xff;
+	
+	PORTB = FND[i];	//i=0 FND[0] 출력
+	
+	TCCR0 = 0x04;	//0000 0100 64분주로 설정
+	TCNT0 = 6;		//256 -250 = 6 -> 256일 때 오버플로우가 발생해야한다
+	TIMSK = 0x01;	//0000 0001 오버플로우 인터럽트 활성화
+	sei();			//전역 인터럽트 활성화
+	
+	while(1);
+}
+```
+
+
+### 소스코드 구성
+---
+
+```cpp
+unsigned char FND[10] = {0x3f, 0x06, 0x5b, 0x4f, 0x66, 0x6d, 0x7d, 0x27, 0x7f, 0x67};
+```
+
+|숫자| DpGFE_DCBA |16진수|숫자|DpGFE_DCBA|16진수|
+|:--:|:--:|:--:|:--:|:--:|:--:|
+|0|0011 1111|0x3f|5|0110 1101|0x6d|
+|1|0000 0110|0x06|6|0111 1101|0x7d| 
+|2|0101 1011|0x5b|7|0010 0111|0x27|
+|3|0100 1111|0x4f|8|0111 1111|0x7f|
+|4|0110 0110|0x66|9|0110 0111|0x67|
+
+```cpp 
+static unsigned int count, i;
+```
+*  static 변수(정적 변수)
+	* **static 변수**는 지역변수로 사용 가능하고 전역변수로도 사용 가능하다.
+	* 선언 시 초기화하지 않아도 **0**으로 초기화된다.
+	* 프로그램 실행 시 할당되고 프로그램 종료 시 파괴된다.
+* **count 변수**는 오버플로우 발생 횟수를 저장하는 변수이고 **i**는 **FND[i]** 배열 대응하여 숫자를 저장하는 변수이다.
+
+```cpp 
+int main(void){
+	DDRB = 0xff;
+	
+	PORTB = FND[i];
+	
+	TCCR0 = 0x04;	//0000 0100 분주비 64로 설정
+	TCNT0 = 6;		//256 -250 = 6 -> 256일 때 오버플로우가 발생해야한다
+	TIMSK = 0x01;	//0000 0001 오버플로우 인터럽트 활성화
+	sei();			//전역 인터럽트 활성화
+	
+	while(1);
+}
+```
+* ```PORTB = FND[i]```
+	* ```static unsigned int i```는 static 변수로 선언 했기 때문에 ```i```의 초기값은 0이 되어 ```PORTB = FND[0]```이 된다.
+* 오버플로우 인터럽트 설정
+	* ATmega128의 **시스템 클럭은 16MHz**이고 현재 **TCCR0로 64분주**로 설정했다. **16MHz/64 = 250,000Hz**가 된다는 뜻이고 **250,000Hz는 1초에 250,000번 깜빡**거린다는 뜻이다.  
+	* 더 정확한 주기를 알아보기 위해서 계산을 해보면**1/250,000 = 0.000004s** 가 되고 알아보기 쉽게 **0.000004*1000000 = 4us** 마다 한 번 깜빡거리게 되는 것이다. 즉, **4us가 250,000번**이 이루어지면 1초가 되는 것이다.
+	* 만약 1ms마다 오버플로우 인터럽트를 발생시키고 싶다면 1ms/4us = 250이 카운트 되어야 한다.
+	* TCNT0는 255(0xff)개가 넘으면 오버플로우 인터럽트가 발생하기 때문에 ```TCNT0 = 6;```처럼 초기값은 6이 되는 것이다.
+	* **4us*250 = 1ms** 이것이 오버플로우가 일어나는 주기이다.
+	* 모든 설정이 완료되었다면 **TIMSK**로 오버플로우 인터럽트를 활성화시켜주어야 한다.
+
+```cpp
+ISR(TIMER0_OVF_vect){
+	count++;
+	if(count > 1000){	//1ms마다 오버플로우가 발생하니까 1초마다 카운트가 되게하려면 1ms*1000 = 1s가 되어야 한다
+		i++;			//1초마다 FND출력값 증가
+		count = 0;		//오버플로우 발생 횟수 초기화
+		if(i > 9){		//FND에 출력되는 숫자가 9를 넘으면
+			i = 0;		//FND 출력 숫자 초기화
+			PORTB = FND[i];	//초기화한 FND 출력
+		}
+		else PORTB = FND[i];	//FND에 출력되는 숫자가 9를 넘지않으면 FND 출력
+	}
+}
+```
+* ```if(count > 1000)```
+	* 1ms 주기마다 오버플로우가 발생한다고 했기 때문에 1초마다 카운트되게 하기 위해서 **1ms*1000**과 같이 표현했다.
+* ```count = 0;```
+	* 1초가 카운트되고 다음 1초를 카운트 하기 위해 **오버플로 발생 횟수를 초기화** 시켜주었다.
+* ```if(i > 9)```
+	* FND에 출력되는 숫자가 9를 넘으면 출력되는 숫자를 0으로 초기화 시킨다.
