--- a/_posts/AVR/2022-04-04-7segment.md
+++ b/_posts/AVR/2022-04-04-7segment.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[ATmega128]Falling edge Interrupt LED 제어"
+title: "[ATmega128]7segment 제어"
 categories: ["basic"]
 tag: [ATmega128]
 
