--- a/_posts/AVR/2022-04-04-7segment.md
+++ b/_posts/AVR/2022-04-04-7segment.md
@@ -88,7 +88,8 @@ static unsigned int count, i;
 	* **static 변수**는 지역변수로 사용 가능하고 전역변수로도 사용 가능하다.
 	* 선언 시 초기화하지 않아도 **0**으로 초기화된다.
 	* 프로그램 실행 시 할당되고 프로그램 종료 시 파괴된다.
-* **count 변수**는 오버플로우 발생 횟수를 저장하는 변수이고 **i 변수**는 **FND[i]** 배열 대응하여 숫자를 저장하는 변수이다.
+* count 변수
+	*  **count 변수**는 오버플로우 발생 횟수를 저장하는 변수이고 **i 변수**는 **FND[i]** 배열 대응하여 숫자를 저장하는 변수이다.
 
 ```cpp 
 	PORTB = FND[i];
