--- a/_posts/AVR/2022-04-04-7segment.md
+++ b/_posts/AVR/2022-04-04-7segment.md
@@ -12,24 +12,24 @@ toc_sticky: true
 
 ># 7segment Timer/Counter
 
-이론 파트에서 정리한 Timer/Counter로 7segment를 제어해보려 한다. 
+이론 파트에서 정리한 Timer/Counter로 7segment를 제어해보려 한다. 사용하는 7segment는 '3611AS'로 데이터시트를 참고해 핀들을 연결하고 7segment 숫자가 출력될 수 있게 16진수로 설정해주었다.
 
-|![blog](https://github.com/JiJinWoo/JiJinWoo.github.io/blob/master/assets/images/avrblog/3611as.PNG?raw=true)|
-|:---:|
-|*[7segment 3611AS (Reference : 3611AS datasheet]*|
-
-* 7segment는 각각마다 데이터시트가 다르기 때문에 각자가 사용하는 데이터 시트를 참고해서 설계해야한다.
+|![blog](https://github.com/JiJinWoo/JiJinWoo.github.io/blob/master/assets/images/avrblog/3611as.PNG?raw=true)|![blog](https://github.com/JiJinWoo/JiJinWoo.github.io/blob/master/assets/images/avrblog/segmentDatasheet.PNG?raw=true)|
+|:---:|:--:|
+|*[7segment 3611AS (Reference : 3611AS datasheet]*|*[7segment 3611AS (Reference : 3611AS datasheet]*|
 
 |숫자| DpGFE_DCBA |16진수|숫자|DpGFE_DCBA|16진수|
 |:--:|:--:|:--:|:--:|:--:|:--:|
 |0|0011 1111|0x3f|5|0110 1101|0x6d|
-|1|0000 0110|0x06|6|0111 1101|0x7d| 
+|1|0000 0110|0x06|6|0111 1101|0x7d|
 |2|0101 1011|0x5b|7|0010 0111|0x27|
 |3|0100 1111|0x4f|8|0111 1111|0x7f|
 |4|0110 0110|0x66|9|0110 0111|0x67|
 
 
 ## 하드웨어 설계
+
+* 본인이 쓰는 7segment가 프로테우스에 없어서 회로를 참조했다.
 
 |![blog](https://github.com/JiJinWoo/JiJinWoo.github.io/blob/master/assets/images/avrblog/7segment.PNG?raw=true)|
 |:---:|
@@ -76,11 +76,6 @@ int main(void){
 ### 소스코드 구성
 ---
 
-```cpp
-unsigned char FND[10] = {0x3f, 0x06, 0x5b, 0x4f, 0x66, 0x6d, 0x7d, 0x27, 0x7f, 0x67};
-```
-* 데이터시트를 참고해 숫자 0부터 9까지 16진수로 대응되게 했다.
-
 ```cpp 
 static unsigned int count, i;
 ```
@@ -103,9 +98,9 @@ static unsigned int count, i;
 	* ```static unsigned int i```는 static 변수로 선언 했기 때문에 ```i```의 초기값은 0이 되어 ```PORTB = FND[0]```이 된다.
 * 오버플로우 인터럽트 설정
 	* ATmega128의 **시스템 클럭은 16MHz**이고 현재 **TCCR0로 64분주**로 설정했다. **16MHz/64 = 250,000Hz**가 된다는 뜻이고 **250,000Hz는 1초에 250,000번 깜빡**거린다는 뜻이다.  
-	* 더 정확한 주기를 알아보기 위해서 계산을 해보면**1/250,000 = 0.000004s** 가 되고 알아보기 쉽게 **0.000004*1000000 = 4us** 마다 한 번 깜빡거리게 되는 것이다. 즉, **4us가 250,000번**이 이루어지면 1초가 되는 것이다.
-	* 만약 1ms마다 오버플로우 인터럽트를 발생시키고 싶다면 **1ms/4us = 250**이 카운트 되어야 한다.
-	* **TCNT0는 255(0xff)** 개가 넘으면 오버플로우 인터럽트가 발생하기 때문에 ```TCNT0 = 6;```처럼 초기값은 6이 되는 것이다.
+	* 더 정확한 주기를 알아보기 위해서 계산을 해보면**1/250,000 = 0.000004s** 가 되고 알아보기 쉽게 **0.000004*1000000 = 4us** 마다 한 번 깜빡거리게 되는 것이다. 즉, **4us가 250,000번**이 이루어지면 **1초**가 되는 것이다.
+	* 만약 **1ms**마다 오버플로우 인터럽트를 발생시키고 싶다면 **1ms/4us = 250**이 카운트 되어야 한다.
+	* **TCNT0는 255(0xff)** 개가 넘으면 오버플로우 인터럽트가 발생하기 때문에 ```TCNT0 = 6;```처럼 **초기값은 6**이 되는 것이다.
 	* **4us*250 = 1ms** 이것이 오버플로우가 일어나는 주기이다.
 	* 모든 설정이 완료되었다면 **TIMSK**로 오버플로우 인터럽트를 활성화시켜주어야 한다.
 
