--- a/_posts/AVR/2022-03-28-LED1.md
+++ b/_posts/AVR/2022-03-28-LED1.md
@@ -105,7 +105,7 @@ int main(void)
 }
 ```  
 
-~
+
 ## 소스코드 구성
 
 ```cpp
@@ -122,7 +122,7 @@ DDRB = (greenLed | blueLed);
 ```
 * 비트 연산자 ```|```(bitswise OR)
 	* 비트 연산자 ```|```(bitwise OR)은 비트 두 개 중 하나 이상이 1이면 1로 판단하는 연산자이다.
-	* DDRB = (0b00000001 | 00000010)은 **DDRB = 0b00000011**이 되는 것이다.
+	* DDRB = (0b00000001 | 00000010)은 DDRB = 0b00000011이 되는 것이다.
 
 ```cpp
 	while (1)
@@ -134,3 +134,4 @@ DDRB = (greenLed | blueLed);
 	}
 ```
 * while 문 안의 내용은 이전 코딩 내용과 동일하다.
+
