--- a/_posts/AVR/2022-04-04-7segment.md
+++ b/_posts/AVR/2022-04-04-7segment.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[ATmega128]7segment 제어"
+title: "[ATmega128]Timer/Counter Normal Mode로 7segment 제어"
 categories: ["basic"]
 tag: [ATmega128]
 
@@ -12,7 +12,9 @@ toc_sticky: true
 
 ># 7segment Timer/Counter
 
-이론 파트에서 정리한 Timer/Counter로 7segment를 제어해보려 한다. 사용하는 7segment는 '3611AS'로 데이터시트를 참고해 핀들을 연결하고 7segment 숫자가 출력될 수 있게 16진수로 설정해주었다.
+이론 파트에서 정리한 Timer/Counter로 7segment를 제어해보려 한다. Timer/Counter 에서 가장 기본이 되는 Normal Mode를 이용해 최대 카운트가 될 때 오버플로우 인터럽트를 발생시킨다.    
+
+사용하는 7segment는 '3611AS'로 데이터시트를 참고해 핀들을 연결하고 7segment 숫자가 출력될 수 있게 16진수로 설정해주었다.
 
 |![blog](https://github.com/JiJinWoo/JiJinWoo.github.io/blob/master/assets/images/avrblog/3611as.PNG?raw=true)|![blog](https://github.com/JiJinWoo/JiJinWoo.github.io/blob/master/assets/images/avrblog/segmentDatasheet.PNG?raw=true)|
 |:---:|:--:|
