--- a/_posts/AVR/2022-04-04-7segment.md
+++ b/_posts/AVR/2022-04-04-7segment.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[ATmega128]Timer/Counter Normal Mode로 7segment 제어"
+title: "[ATmega128]7segment 제어"
 categories: ["basic"]
 tag: [ATmega128]
 
@@ -10,7 +10,7 @@ toc_icon: "align-justify" # corresponding Font Awesome icon name (without fa pre
 toc_sticky: true
 ---
 
-># 7segment Timer/Counter
+># Timer/Counter Normal Mode
 
 이론 파트에서 정리한 Timer/Counter로 7segment를 제어해보려 한다. Timer/Counter 에서 가장 기본이 되는 Normal Mode를 이용해 최대 카운트가 될 때 오버플로우 인터럽트를 발생시킨다.    
 
