--- a/_posts/AVR/2022-04-04-7segment.md
+++ b/_posts/AVR/2022-04-04-7segment.md
@@ -16,24 +16,24 @@ toc_sticky: true
 
 사용하는 7segment는 '3611AS'로 데이터시트를 참고해 핀들을 연결하고 7segment 숫자가 출력될 수 있게 16진수로 설정해주었다.
 
-|![blog](https://github.com/JiJinWoo/JiJinWoo.github.io/blob/master/assets/images/avrblog/3611as.PNG?raw=true)|![blog](https://github.com/JiJinWoo/JiJinWoo.github.io/blob/master/assets/images/avrblog/segmentDatasheet.PNG?raw=true)|
-|:---:|:--:|
-|*[7segment 3611AS (Reference : 3611AS datasheet]*|*[7segment 3611AS (Reference : 3611AS datasheet]*|
+|![blog](https://github.com/JiJinWoo/JiJinWoo.github.io/blob/master/assets/images/avrblog/3611AS%20datasheet.PNG?raw=true)|
+|:---:|
+|*[7segment 3611AS (Reference : 3611AS datasheet]*|
 
-|숫자| DpGFE_DCBA |16진수|숫자|DpGFE_DCBA|16진수|
-|:--:|:--:|:--:|:--:|:--:|:--:|
-|0|0011 1111|0x3f|5|0110 1101|0x6d|
-|1|0000 0110|0x06|6|0111 1101|0x7d|
-|2|0101 1011|0x5b|7|0010 0111|0x27|
-|3|0100 1111|0x4f|8|0111 1111|0x7f|
-|4|0110 0110|0x66|9|0110 0111|0x67|
+|숫자| DpGFE_DCBA |16진수|숫자|DpGFE_DCBA|16진수| |segment PIN|PORT|segment PIN|PORT|
+|:--:|:--:|:--:|:--:|:--:|:--:|:--:|:--:|:--:|:--:|:--:|
+|0|0011 1111|0x3f|5|0110 1101|0x6d| |10(A)|PB0|2(F)|PB6|
+|1|0000 0110|0x06|6|0111 1101|0x7d| |9(B)|PB1|3(G)|PB5|
+|2|0101 1011|0x5b|7|0010 0111|0x27| |8(**C**)|PB2|7(DP)|PB7|
+|3|0100 1111|0x4f|8|0111 1111|0x7f| |5(D)|PB3|1,6|GND|
+|4|0110 0110|0x66|9|0110 0111|0x67| |4(E)|PB4|
 
 
 ## 하드웨어 설계
 
-|![blog](https://github.com/JiJinWoo/JiJinWoo.github.io/blob/master/assets/images/avrblog/7segment.PNG?raw=true)|
+|![blog](https://github.com/JiJinWoo/JiJinWoo.github.io/blob/master/assets/images/avrblog/segment%20circuit.PNG?raw=true)|
 |:---:|
-|*[7segment (Reference : https://m.blog.naver.com/gjs1029/221120105935)](https://m.blog.naver.com/gjs1029/221120105935)*|
+|*[7segment (Reference : Proteus 8)]*|
 
 ## 소스코드
 
