--- a/_posts/AVR/2022-04-30-CTCMode.md
+++ b/_posts/AVR/2022-04-30-CTCMode.md
@@ -40,10 +40,10 @@ ISR(TIMER0_COMP_vect){
 int main(void){
 	DDRB = 0xff;
 	PORTB = 0x00;
-	TCCR0 = 0x0c;		//CTC Mode, 64분주
-	TCNT0 = 0x00;		//0
-	OCR0 = 250 - 1;		//0~249
-	TIMSK = 0x02;		//OCIE0 출력 비교 매치 인터럽트 허가
+	TCCR0 = 0x0c;		//0000 1100, CTC Mode, 64분주
+	TCNT0 = 0x00;		//TCNT0 카운트 값 초기화
+	OCR0 = 249;			//250-1
+	TIMSK = 0x02;		//OCIE0 비교일치 인터럽트 활성화
 	sei();				//전역 인터럽트 허가
 	
 	while(1);
@@ -100,5 +100,3 @@ ISR(TIMER0_COMP_vect){
 	}
 }
 ```
-
-* 
