--- a/_posts/AVR/2022-04-04-7segment.md
+++ b/_posts/AVR/2022-04-04-7segment.md
@@ -99,7 +99,7 @@ static unsigned int count, i;
 * 오버플로우 인터럽트 설정
 	* ATmega128의 **시스템 클럭은 16MHz**이고 현재 **TCCR0로 64분주**로 설정했다. **16MHz/64 = 250,000Hz**가 된다는 뜻이고 **250,000Hz는 1초에 250,000번 깜빡**거린다는 뜻이다.  
 	* 더 정확한 주기를 알아보기 위해서 계산을 해보면 **1/250,000 = 0.000004s** 가 되고 알아보기 쉽게 **0.000004*1000000 = 4us** 마다 한 번 깜빡거리게 되는 것이다. 즉, **4us가 250,000번**이 이루어지면 **1초**가 되는 것이다.
-	* 만약 **1ms**마다 오버플로우 인터럽트를 발생시키고 싶다면 **1ms/4us = 250**이 카운트 되어야 한다.
+	*  **1ms**마다 오버플로우 인터럽트를 발생시키기 위해 **1ms/4us = 250**이 카운트 되어야 한다.
 	* **TCNT0는 255(0xff)** 개가 넘으면 오버플로우 인터럽트가 발생하기 때문에 ```TCNT0 = 6;```처럼 **초기값은 6**이 되는 것이다.
 	* **4us*250 = 1ms** 이것이 오버플로우가 일어나는 주기이다.
 	* 모든 설정이 완료되었다면 **TIMSK**로 오버플로우 인터럽트를 활성화시켜주어야 한다.
