--- a/_posts/AVR/2022-04-30-CTCMode.md
+++ b/_posts/AVR/2022-04-30-CTCMode.md
@@ -16,9 +16,9 @@ Timer/Counter의 CTC Mode로 LED제어를 구현했다.
 
 ## 하드웨어 설계
 
-|![blog](https://github.com/JiJinWoo/JiJinWoo.github.io/blob/master/assets/images/avrblog/led3(sw).PNG?raw=true)|
+|![blog](https://github.com/JiJinWoo/JiJinWoo.github.io/blob/master/assets/images/avrblog/CTCMODEled.PNG?raw=true)|
 |:---:|
-|*[PIN 10=PB0, 11=PB1, 63=GND]*|
+|*[CTC Mode Led (Reference : Proteus 8)]*|
 
 ## 소스코드
 
