--- a/_posts/AVR/2022-04-30-CTCMode.md
+++ b/_posts/AVR/2022-04-30-CTCMode.md
@@ -73,6 +73,10 @@ int main(void){
 |:--:|
 |*[Waveform Generation Mode Table (Reference : ATmega128 datasheet page 105)]*|
 
+|![blog](https://github.com/JiJinWoo/JiJinWoo.github.io/blob/master/assets/images/avrblog/non%20PWM%20mode%20page%20105.PNG?raw=true)|
+|:--:|
+|*[non-PWM Mode Table (Reference : ATmega128 datasheet page 105)]*|
+
 |![blog](https://github.com/JiJinWoo/JiJinWoo.github.io/blob/master/assets/images/avrblog/Prescaler%20page%20106.PNG?raw=true)|
 |:--:|
 |*[Clock Select Table (Reference : ATmega128 datasheet page 106)]*|
