--- a/_posts/AVR/2020-05-01-FastPWM.md
+++ b/_posts/AVR/2020-05-01-FastPWM.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[ATmega128]CTC Mode로 LED 제어"
+title: "[ATmega128]Fast PWM Mode로 LED 밝기 제어"
 categories: ["basic"]
 tag: [ATmega128]
 
