--- a/_posts/AVR/2022-05-02-LCD.md
+++ b/_posts/AVR/2022-05-02-LCD.md
@@ -85,7 +85,7 @@ void LcdDataWrite(char data){	//LCD 데이터 쓰기 함수
 }
 ```
 
-> 8bit 초기화 과정
+> **8bit 초기화 과정**
 
 앞에서 생성한 명령어 쓰기 함수를 이용해 8bit 초기화 함수를 만들 수 있다.
 * 8bit 초기화 과정
@@ -270,3 +270,4 @@ int main(void){
 	while(1);
 }
 ```
+
