--- a/_posts/AVR/2022-05-02-LCD.md
+++ b/_posts/AVR/2022-05-02-LCD.md
@@ -95,19 +95,18 @@ void LcdDataWrite(char data){	//LCD 데이터 쓰기 함수
 |:---:|
 |*[8bit Initialization (Reference : LC1621 Datasheet page 13)]*|
 
----
+> **Function Set**
 
 |![blog](https://github.com/JiJinWoo/JiJinWoo.github.io/blob/master/assets/images/avrblog/FunctionSet.PNG?raw=true)|
 |:---:|
 |*[Function set (Reference : LC1621 Datasheet page 18)]*|
 
-* Function set
-	*	Instruction table에서 Function set에 관한 Description 설명을 보면 비트 설명이 있다.
-	*	DL : 8bit(DB7 ~ DB0)로 전송할 것인지 4bit(DB7 ~ DB4)로 전송할 것인지 결정
-	*	N : LCD 상에 2줄로 표시할 것인지 1줄로 표시할 것인지 결정
-	*	F : 폰트를 5x11로 설정할 것인지 5x8로 설정할 것인지 결정
-	*	필자는 8bit 전송하고 1줄에 표시하며 5x8의 폰트를 사용하기 때문에 ```0b00111000```이 된다. 즉, 16진수로 바꾸어주면 ```0x38```이 되고 명령어 쓰기 함수를 이용해서 값을 설정해주면 ```LcdCmdWrite(0x38)```이 된다.
-	*	Functiuon set을 해준 뒤 39us를 대기해야하지만 편리를 위해 앞으로 1ms을 고정하겠다.
+*	Instruction table에서 Function set에 관한 Description 설명을 보면 비트 설명이 있다.
+*	DL : 8bit(DB7 ~ DB0)로 전송할 것인지 4bit(DB7 ~ DB4)로 전송할 것인지 결정
+*	N : LCD 상에 2줄로 표시할 것인지 1줄로 표시할 것인지 결정
+*	F : 폰트를 5x11로 설정할 것인지 5x8로 설정할 것인지 결정
+*	필자는 8bit 전송하고 1줄에 표시하며 5x8의 폰트를 사용하기 때문에 ```0b00111000```이 된다. 즉, 16진수로 바꾸어주면 ```0x38```이 되고 명령어 쓰기 함수를 이용해서 값을 설정해주면 ```LcdCmdWrite(0x38)```이 된다.
+*	Functiuon set을 해준 뒤 39us를 대기해야하지만 편리를 위해 앞으로 1ms을 고정하겠다.
 
 ```cpp
 void LcdInit(void){	//LCD 초기화 함수
@@ -115,18 +114,17 @@ void LcdInit(void){	//LCD 초기화 함수
 	LcdCmdWrite(0x38);	//Function set
 ```
 
----
+> **Display ON/OFF Control**
 
 |![blog](https://github.com/JiJinWoo/JiJinWoo.github.io/blob/master/assets/images/avrblog/DisplayOnOff.PNG?raw=true)|
 |:---:|
 |*[Display ON/OFF Control (Reference : LC1621 Datasheet page 17)]*|
 
-* Display ON/OFF Control
-	* D : 디스플레이를 ON or OFF로 설정할 것인지 결정
-	* C : 커서를 보이게 할 것인지 안보이게 할 것인지 결정
-	* B : 커서를 깜빡이게 할 것인지 하지 않을 것인지 결정
-	* 디스플레이를 ON시키고 커서는 안보이게 하며 깜빡임도 없게 만들면 ```0b00001100```이 되고 16진수로 ```0x0C```가 된다. 즉, ```LcdCmdWrite(0x0C)```가 된다.
-	* Display ON/OFF 설정을 해준 뒤 39us를 대기해야하지만 편리를 위해 1ms으로 설정한다. 
+* D : 디스플레이를 ON or OFF로 설정할 것인지 결정
+* C : 커서를 보이게 할 것인지 안보이게 할 것인지 결정
+* B : 커서를 깜빡이게 할 것인지 하지 않을 것인지 결정
+* 디스플레이를 ON시키고 커서는 안보이게 하며 깜빡임도 없게 만들면 ```0b00001100```이 되고 16진수로 ```0x0C```가 된다. 즉, ```LcdCmdWrite(0x0C)```가 된다.
+* Display ON/OFF 설정을 해준 뒤 39us를 대기해야하지만 편리를 위해 1ms으로 설정한다. 
 
 ```cpp
 void LcdInit(void){	//LCD 초기화 함수
@@ -136,15 +134,14 @@ void LcdInit(void){	//LCD 초기화 함수
 	LcdCmdWrite(0x0C);	//Display ON/OFF Control
 ```
 
----
+> **Clear Display**
 
 |![blog](https://github.com/JiJinWoo/JiJinWoo.github.io/blob/master/assets/images/avrblog/ClearDisplay.PNG?raw=true)|
 |:---:|
 |*[Clear Display (Reference : LC1621 Datasheet page 17)]*|
 
-* Clear Display
-	* Clear Display는 따로 설정해줄 것 없이 그대로 사용하면 된다.
-	* Clear Display 이후에는 1.53ms 이상 대기니까 2ms 정도 대기해준다.
+* Clear Display는 따로 설정해줄 것 없이 그대로 사용하면 된다.
+* Clear Display 이후에는 1.53ms 이상 대기니까 2ms 정도 대기해준다.
 
 ```cpp
 void LcdInit(void){	//LCD 초기화 함수
@@ -157,16 +154,15 @@ void LcdInit(void){	//LCD 초기화 함수
 	_delay_ms(2);	//Display clear 후 1.53ms 대기지만 넉넉하게 5ms 대기
 ```
 
----
+> **Entry Mode Set**
 
 |![blog](https://github.com/JiJinWoo/JiJinWoo.github.io/blob/master/assets/images/avrblog/EntryModeSet.PNG?raw=true)|
 |:---:|
 |*[Entry Mode Set (Reference : LC1621 Datasheet page 17)]*|
 
-* Entry Mode Set
-	* I/D : 글자가 입력될 때마다 어드레스 카운트를 증가시킬 것인지 감소시킬 것인지, 즉 왼쪽에서 오른쪽으로 입력되게 할 것인지 오른쪽에서 왼쪽으로 입력되게 할 것인지 결정
-	* SH : 전체 쉬프트를 할 것인지 하지 않을 것인지 결정
-	* 글자를 왼쪽에서 오른쪽으로 입력할 것이며 전체시프트는 하지 않기 때문에 ```0b00000110```가 되고 16진수로 ```0x06```이 된다.
+* I/D : 글자가 입력될 때마다 어드레스 카운트를 증가시킬 것인지 감소시킬 것인지, 즉 왼쪽에서 오른쪽으로 입력되게 할 것인지 오른쪽에서 왼쪽으로 입력되게 할 것인지 결정
+* SH : 전체 쉬프트를 할 것인지 하지 않을 것인지 결정
+* 글자를 왼쪽에서 오른쪽으로 입력할 것이며 전체시프트는 하지 않기 때문에 ```0b00000110```가 되고 16진수로 ```0x06```이 된다.
 
 ```cpp
 void LcdInit(void){	//LCD 초기화 함수
@@ -181,7 +177,6 @@ void LcdInit(void){	//LCD 초기화 함수
 }
 ```
 
----
 
 > **LCD 위치 함수**
 
@@ -204,7 +199,7 @@ void LcdPosition(char length, char width){
 }
 ```
 
----
+
 
 > **LCD 문자열 함수**
 
