--- a/_posts/AVR/2022-05-02-LCD.md
+++ b/_posts/AVR/2022-05-02-LCD.md
@@ -112,6 +112,7 @@ void LcdDataWrite(char data){	//LCD 데이터 쓰기 함수
 void LcdInit(void){	//LCD 초기화 함수
 	_delay_ms(30);	//전원 인가 후 30ms 대기
 	LcdCmdWrite(0x38);	//Function set
+	_delay_ms(1);	//Function set 후 1ms 대기
 ```
 
 > **Display ON/OFF Control**
