--- a/_posts/AVR/2022-05-02-LCD.md
+++ b/_posts/AVR/2022-05-02-LCD.md
@@ -20,7 +20,7 @@ toc_sticky: true
 
 |![blog](https://github.com/JiJinWoo/JiJinWoo.github.io/blob/master/assets/images/avrblog/LcdCircuit1.PNG?raw=true)|
 |:---:|
-|*[LCD Circuit (Reference : Proteus 8)]*|
+|*[LCD (Reference : Proteus 8)]*|
 
 ## LCD 핀 구성
 
@@ -68,6 +68,12 @@ void LcdCmdWrite(char cmd){	//LCD 명령어 쓰기 함수
 	_delay_ms(5);
 }
 ```
+
+Interface Timing Chart를 참조해 각각에 해당하는 명령어의 딜레이를 확인할 수 있다.
+
+|![blog](https://github.com/JiJinWoo/JiJinWoo.github.io/blob/master/assets/images/avrblog/InterfaceTimingChart.PNG?raw=true)|
+|:---:|
+|*[Interface Timing Chart (Reference : LC1621 Datasheet page 4)]*|
 
 > **데이터 쓰기 함수**
 
@@ -246,7 +252,7 @@ void LcdInit(void){	//LCD 초기화 함수
 	LcdCmdWrite(0x38);	//Function set
 	_delay_ms(1);	//Function set 후 1ms 대기
 	LcdCmdWrite(0x0C);	//Display ON/OFF Control
-	_delay_ms(1);	//Display ON/OFF Control 후 39us 대기지만 넉넉하게 1ms 대기
+	_delay_ms(1);	//Display ON/OFF Control 후 1ms 대기
 	LcdCmdWrite(0x01);	//Display clear
 	_delay_ms(2);	//Display clear 후 2ms 대기
 	LcdCmdWrite(0x06);	//Entry Mode Set
