--- a/_posts/AVR/2022-05-02-LCD.md
+++ b/_posts/AVR/2022-05-02-LCD.md
@@ -272,8 +272,8 @@ int main(void){
 	PORTA = 0xFF;
 	DDRF = 0xFF;
 	PORTF = 0x00;
-	char str1[] = "lcd 18noma";
-	char str2[] = "jomdaera!!";
+	char str1[] = "Hello World";
+	char str2[] = "LCD CLEAR!!";
 	
 	LcdInit();
 	LcdPosition(0,0);	//(0,0)으로 이동
